feat: add new swagger files, add employees
